# rust-rocket-clean-arch

./: .env  Cargo.toml
infra/: postgres-configmap.yaml  postgres-storage.yaml
local-infra/: Sem Título.dmm  docker-compose.yml
src/: main.rs
src/application/: mappers.rs  mod.rs
src/application/entrypoints/: mod.rs
src/application/entrypoints/rest/: mod.rs  users_requests_handlers.rs
src/application/entrypoints/rest/users_requests_handlers/: mod.rs
src/application/repositories_impls/: mod.rs
src/domain/: entities.rs  mod.rs
src/domain/entities/: mod.rs
src/domain/shared/: mod.rs  repositories.rs  validators.rs
src/domain/shared/repositories/: mod.rs
src/domain/usecases/: create_user_usecase.rs  delete_user_usecase.rs  list_users_usecase.rs  mod.rs  one_user_usecase.rs  one_users_usecase.rs  update_user_usecase.rs
src/infrastructure/: logger.rs  mod.rs  repositories_impls.rs
src/infrastructure/database/: connection.rs  entities.rs  mod.rs  repositories.rs  schemas.rs
src/infrastructure/logger/: mod.rs
src/infrastructure/repositories_impls/: mod.rs
