[package]
name = "crud-pessoa"
version = "1.0.0"
edition = "2021"

[dependencies]
rocket = "0.5.1"
chrono = "0.4.38"
serde = "1.0.203"
serde_json = "1.0.117"
diesel = { version = "2.2.0", features = ["postgres", "chrono", "uuid", "r2d2"] }
dotenvy = "0.15.7"
r2d2 = "0.8.10"
shaku = "0.6.1"
shaku_rocket = "0.7.0"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs,
]

[build]
rustc-args = ["-Vv"]
