[package]
name = "crud-pessoa"
version = "1.0.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
chrono = "0.4.38"
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.120"
diesel = { version = "2.2.1", features = ["postgres", "chrono", "uuid", "r2d2"] }
dotenvy = "0.15.7"
r2d2 = "0.8.10"

[dependencies.uuid]
version = "1.9.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs,
    "serde"
]

[build]
rustc-args = ["-Vv"]
